--- a/MyCProgram/Docker/jjserver/run.sh.org
+++ b/MyCProgram/Docker/jjserver/run.sh.org
@@ -1,3 +1,18 @@
-#echo hello
-#/bin/sh
+echo hello
+#!bin/sh
 node script/server.js
+
+#!/bin/bash
+
+# 显示一系列数字
+
+
+count=1
+
+#while [ $count -le 10000 ]; do
+#while true; do
+#    echo $count
+#    count=$((count + 1))
+#    sleep 1
+#done
+#echo "finished"
